Closed
Bug 419051
Opened 18 years ago
Closed 18 years ago
Find bar search term timeout/reset
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.6
People
(Reporter: bugzilla, Assigned: stuart.morgan+bugzilla)
References
Details
(Keywords: fixed1.8.1.13)
Attachments
(1 file)
|
971 bytes,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en; rv:1.9b4pre) Gecko/2008022200 Camino/2.0a1pre (like Firefox/3.0b4pre)
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en; rv:1.9b4pre) Gecko/2008022200 Camino/2.0a1pre (like Firefox/3.0b4pre)
I've been tracking Camino trunk recently and was pleased to discover that the
find bar persistence issue (https://bugzilla.mozilla.org/show_bug.cgi?id=417346) was fixed.
However, since updating to 2008-02-21-00-trunk, I'm experiencing problems with
the find bar's usability. Apparently, this change introduced some sort of
timeout that resets the find bar search content, after which a new search is
started upon further input. The timeout value seems to be somewhere around 0.5
seconds, which strikes me as too short, because you have to type pretty fscking
fast for it to work. I'm having great difficulty to do any searches using
search terms longer than 4 characters.
Also, when hitting this timeout/reset, the current search term gets selected,
so you can't extend the search term without overwriting it, unless you first
deselect the existing term. Maybe the value for this timeout could be made into
a user preference?
Reproducible: Always
Confirming; I see this on branch, too. My money is on bug 417837, FWIW.
I think we should fix this before b3.
I backed out bug 417837 locally and the problem disappeared.
Blocks: 417837
| Assignee | ||
Comment 3•18 years ago
|
||
Doh! Who writes this garbage?
Assignee: nobody → stuart.morgan
Flags: camino1.6b3? → camino1.6b3+
Target Milestone: --- → Camino1.6
| Assignee | ||
Comment 4•18 years ago
|
||
Attachment #305054 -
Flags: superreview?(mikepinkerton)
Comment 5•18 years ago
|
||
Comment on attachment 305054 [details] [diff] [review]
fix
who sr's this garbage? :)
Attachment #305054 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 6•18 years ago
|
||
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: regression → fixed1.8.1.13
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•