Camino only - Bug 419051: Only re-focus the search field when it's not already focused. r/sr=pink